--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.0|^8.1",
-        "illuminate/contracts": "^9.4"
+        "php": "^8.1",
+        "illuminate/contracts": "^9.4",
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "pestphp/pest": "^1.21",
