--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0|^8.1",
-        "illuminate/contracts": "^9.4",
-        "livewire/livewire": "^2.10"
+        "illuminate/contracts": "^9.4"
     },
     "require-dev": {
         "pestphp/pest": "^1.21",
