--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
         "laravel-mix": "^6.0",
+        "mande": "^2.0.1",
+        "pinia": "^2.0.12",
         "postcss": "^8.4.8",
-        "tailwindcss": "^3.0.23"
+        "tailwindcss": "^3.0.23",
+        "vue": "^3.2.31",
+        "vue-loader": "^16.2.0"
     },
     "repository": {
         "type": "git",
