--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0|^8.1",
-        "illuminate/contracts": "^9.4"
+        "illuminate/contracts": "^9.0|^10.0"
     },
     "require-dev": {
         "pestphp/pest": "^1.21",
